--- a/style.css
+++ b/style.css
@@ -3,10 +3,16 @@
   background-color: #e7b27b;
 }
 
-.home-links-title {
+.home-links-title,
+.home-title {
   font-weight: 900;
   font-size: 64px;
   text-align: center;
+}
+
+.secondaries-titles {
+  font-weight: 900;
+  font-size: 32px;
 }
 
 div {
@@ -15,4 +21,18 @@ div {
 a {
   font-size: 32px;
   color: #4a3308;
+}
+
+.recipe-img {
+  height: 300px;
+  width: 600px;
+}
+
+p {
+  font-size: 24px;
+  text-align: center;
+}
+
+.list {
+  font-size: 16px;
 }
